# Closed_Solid_Reconstruction

./: CMakeLists.txt  README.md
data/: concaveFaceModel_1.stp
matlab/: edit_distance.m  edit_example.m
src/: AlgorithmTimer.h  BrepIO.cpp  BrepIO.hpp  Utils.cpp  Utils.h  common.h  main.cpp
